# PMA

./: CMakeLists.txt  LICENSE  README.md  doc.md
example/: boggle.pma  boggle_no.in  boggle_yes.in  chessverify.pma  mc_chest.pma  wordsearch.pma
main/: main.cpp
snails/: ast.h  compile.cpp  compile.h  encoding.cpp  encoding.h  execute.cpp  execute.h  general.h  grid.cpp  grid.h  instructions.h  interpreter.cpp  interpreter.h  parse.cpp  parse.h  pattern.cpp  pattern.h  snails.cpp  state.cpp  state.h  tokens.h
test/: encoding.test  test.cpp  tests.txt
